--- a/index.html
+++ b/index.html
@@ -148,6 +148,22 @@
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img4.JPG" alt=""></div>
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img5.JPG" alt=""></div>
                             </div>
+                            
+                            <div class="bande-images">
+                                <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img1.JPG" alt=""></div>
+                                <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img2.JPG" alt=""></div>
+                                <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img3.JPG" alt=""></div>
+                                <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img4.JPG" alt=""></div>
+                                <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img5.JPG" alt=""></div>
+                            </div>
+                            
+                            <div class="bande-images">
+                                <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img1.JPG" alt=""></div>
+                                <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img2.JPG" alt=""></div>
+                                <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img3.JPG" alt=""></div>
+                                <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img4.JPG" alt=""></div>
+                                <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img5.JPG" alt=""></div>
+                            </div>
                         </div>
                     </div>
                 </div>
