--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="fenetre"></div>
                     <div class="body-page">
                         <div class="galerie">
-                            <div class="bande-images">
+                            <div class="bande-images color">
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande1/img1.JPG" alt=""></div>
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande1/img2.JPG" alt=""></div>
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande1/img3.JPG" alt=""></div>
@@ -141,7 +141,7 @@
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande1/img5.JPG" alt=""></div>
                             </div>
 
-                            <div class="bande-images">
+                            <div class="bande-images color">
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img1.JPG" alt=""></div>
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img2.JPG" alt=""></div>
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img3.JPG" alt=""></div>
@@ -149,7 +149,7 @@
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img5.JPG" alt=""></div>
                             </div>
                             
-                            <div class="bande-images">
+                            <div class="bande-images color">
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img1.JPG" alt=""></div>
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img2.JPG" alt=""></div>
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img3.JPG" alt=""></div>
@@ -157,7 +157,7 @@
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img5.JPG" alt=""></div>
                             </div>
                             
-                            <div class="bande-images">
+                            <div class="bande-images color">
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img1.JPG" alt=""></div>
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img2.JPG" alt=""></div>
                                 <div class="emplacement"><img src="images/page-dessin/bandes/bande2/img3.JPG" alt=""></div>
