a new error moderate

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         var pageaccueil = document.getElementById('pageaccueil');
                         pageaccueil.style.transition = '0.7s';
                         pageaccueil.style.bottom = '100vh';
-                ">Accéder</a>
+                ">Découvrir</a>
                     <a href="">Acheter</a>
                     <a href="">Actualités</a>
                     <a href="">Me contacter</a>
